--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   "author": "Valentin Marinov",
   "license": "ISC",
   "devDependencies": {
-    "@parcel/transformer-sass": "^2.14.2",
-    "parcel": "^2.0.0-beta.1",
-    "sass": "^1.26.10"
+    "@parcel/transformer-sass": "^2.14.4",
+    "parcel": "^2.14.4",
+    "sass": "^1.26.10",
+    "svgo": "^3.3.2"
   },
   "dependencies": {
     "core-js": "^3.41.0",
